--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="app_name">SeCam</string>
+    <string name="app_name">EnCam</string>
 	
 <string name="error_fileSaveError">An error orrured while saving the photo</string><string name="warning_noKeySelected">No public keys selected. Use \'menu\' -> \'Select Keys\' to select public keys for encryption</string>
 <string name="warning_noExternalStorage">No SDcard or similar storage found, using internal storage</string>
 <string name="saveDirNameDefault">Encrypted Pictures</string>
+<string name="takePictureButton_Text">CLICK</string>
 </resources>
