--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,7 +14,6 @@
     <string name="warning_noApg">APG is not installed. This app requires APG to work. Click Close to go to Android Market and close this App.</string>
     <string name="success_mailSend">The mail was sent successfully!</string>
     <string name="success_ftpUpload">The picture was uploaded successfully!</string>
-    <string name="pref_preferences">Preferences</string>
     <string name="pref_path">Path</string>
     <string name="pref_pathDefault">Encrypted Pictures</string>
     <string name="pref_upload">Upload</string>
@@ -49,6 +48,7 @@
     <string name="about_text">by Schlafwandler and Pogdi</string>
     <string name="menu_help">Help</string>
     <string name="help_text">&lt;big>Select Keys&lt;/big>&lt;br />Go Menu &lt;i>Select public keys&lt;/i> and check the keys you want your pictures to be encrypted with.&lt;br />&lt;br />&lt;big>Take pictures&lt;/big>&lt;br />You can take pictures tapping either anywhere on the screen or the Directional Pad Center key (if your phone has one). The pictures are encrypted on the fly and saved in a folder on the storage medium you can define in &lt;i>Preferences&lt;/i>. The default folder is &lt;i>Encrypted Pictures&lt;/i>. The filename is generated randomly, the suffix is always &lt;i>.ejpg&lt;/i>.&lt;br />&lt;br />&lt;big>Decrypt photos&lt;/big>&lt;br />The encrypted photographs are stored in the described folder on the SD-Card. They can be copied to any computer and decrypted using gpg.&lt;br />You should store the decrypted pictures only on secured media, like an encrypted drive.</string>
+    <string name="menu_preferences">Preferences</string>
     <string name="bt_chooseKey">Choose Key…</string>
     <string name="dialog_share">"Share via 3rd party App"</string>
 
