--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,8 +12,12 @@
     <string name="warning_noKeySelected">No public keys selected. Pease select at least one public key for encryption.</string>
     <string name="warning_noExternalStorage">No SDcard or similar storage found, using internal storage</string>
     <string name="warning_noApg">APG is not installed. This app requires APG to work. Click Close to go to Android Market and close this App.</string>
+    <string name="warning_noRetryUploads">There are no uploads to retry.</string>
+    <string name="warning_uploadDeleteFailed">Warning: The picture was uploaded, but not deleted!</string>
     <string name="success_mailSend">The mail was sent successfully!</string>
     <string name="success_ftpUpload">The picture was uploaded successfully!</string>
+    <string name="success_uploadAndDelete">The picture was uploaded and deleted successfully!</string>
+    <string name="info_retryUploads">Retrying to upload files…</string>
     <string name="pref_saveFile">Save File</string>
     <string name="pref_path">Path</string>
     <string name="pref_pathDefault">Encrypted Pictures</string>
@@ -27,6 +31,19 @@
     </string-array>
 
     <string name="pref_upload">Upload</string>
+    <string name="pref_uploadEnable">Enable Uploading</string>
+    <string name="pref_uploadService">Service</string>
+    <string name="pref_uploadServiceDesc">Choose a service to upload the files with.</string>
+
+    <string-array name="pref_uploadServiceEntries">
+        <item>Mail</item>
+        <item>FTP</item>
+        <item>3rd Party App</item>
+    </string-array>
+
+    <string name="pref_uploadPreferences">Server Settings</string>
+    <string name="pref_uploadRetry">Enable retry uploads</string>
+    <string name="pref_uploadDeleteAfter">Delete files after upload</string>
     <string name="pref_mail">Send Photos via Mail</string>
     <string name="pref_mailEnable">Enable Mail</string>
     <string name="pref_mailPreferences">Mail Preferences</string>
@@ -59,6 +76,7 @@
     <string name="menu_help">Help</string>
     <string name="help_text">&lt;big>Select Keys&lt;/big>&lt;br />Go Menu &lt;i>Select public keys&lt;/i> and check the keys you want your pictures to be encrypted with.&lt;br />&lt;br />&lt;big>Take pictures&lt;/big>&lt;br />You can take pictures tapping either anywhere on the screen or the Directional Pad Center key (if your phone has one). The pictures are encrypted on the fly and saved in a folder on the storage medium you can define in &lt;i>Preferences&lt;/i>. The default folder is &lt;i>Encrypted Pictures&lt;/i>. The filename is generated randomly, the suffix is always &lt;i>.ejpg&lt;/i>.&lt;br />&lt;br />&lt;big>Decrypt photos&lt;/big>&lt;br />The encrypted photographs are stored in the described folder on the SD-Card. They can be copied to any computer and decrypted using gpg.&lt;br />You should store the decrypted pictures only on secured media, like an encrypted drive.</string>
     <string name="menu_preferences">Preferences</string>
+    <string name="menu_retryUpload">Retry Uploads</string>
     <string name="bt_chooseKey">Choose Key…</string>
     <string name="bt_close">Close</string>
     <string name="dialog_share">"Share via 3rd party App"</string>
